--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -5,6 +5,9 @@
 \graphicspath{ {images/} }
 \usepackage{color}
 \usepackage{hyperref}
+\hypersetup{
+    colorlinks=false, pdfborder={0 0 0}
+    }
 
 \title{Projet Informatique}
 \author{Guo Sylvain, Rachdi Mustapha, Hoarau Romain, Paterni Thomas}
@@ -37,18 +40,34 @@ A défaut de mettre en place un serveur hébergeur, nous avons préféré nous t
 
 \noindent Le lien vers le dépôt du code est \emph{\href{https://github.com/mistertot/SupplyChainProject}{disponible ici}}.
 
+\newpage
+
 %************************************************************%
 
 \section{Conception logicielle}
+%----------------------------%
+\subsection{Modèle objet}
+
+%----------------------------%
+\subsection{Structure de données}
 
 %************************************************************%
 
 \section{Stratégie de résolution}
+%----------------------------%
+\subsection{Algorithmes principaux}
+
+%----------------------------%
+\subsection{Indicateurs}
 
 %************************************************************%
 
 \section{Bilan}
+%----------------------------%
+\subsection{Résultats numériques}
 
+%----------------------------%
+\subsection{Limites et améliorations possibles}
 
 %************************************************************%
 \end{document}
